monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A2030/A2030a.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A2030;

grammar A2030a {

  A extends B;

}
